Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
-
None
Description
Found while tracking down TS-3105. It seemed like sometimes producers were having producer_run called on them multiple times. producer_run can be run on a particular producers or on all producers added at that point in time.
There are a couple places where multiple producers are set up and so producer_run(NULL) makes sense. But in many cases a producer is carefully added and then producer_run(NULL) is called on all producers that are around that that point in time.
It seems safer to call producer_run() on the newly added producer in those cases.
Attachments
Issue Links
- is part of
-
TS-3105 Combination of fixes for TS-3084 and TS-3073 causing asserts and segfaults on 5.1 and beyond
-
- Closed
-