TS-3190: Use the version of producer_run that runs a specific producer instead of all producers. This closes #144.